--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cheerio": "^1.0.0-rc.12",
     "mongoose": "^8.1.0",
     "next": "14.0.4",
+    "node": "^21.6.1",
     "nodemailer": "^6.9.8",
     "react": "^18",
     "react-dom": "^18",
